// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pressable Tests Pressables can change text on press/rest, state rest 1`] = `
{
  "Automation Tree": {
    "AutomationId": "one_press_me_button",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Press Me",
  },
  "Visual Tree": {
    "Comment": "one_press_me_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      64,
      22,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can change text on press/rest, state rest 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_press_console",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "onPress",
  },
  "Visual Tree": {
    "Comment": "pressable_press_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      854,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_delay_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      19,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Me",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "pressable feedback events",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              56,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          56,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_feedback_events_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      56,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_console",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressOut",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "press",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "pressIn",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "hover in",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Children": [
      {
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          -1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          1,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          -2,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          -1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": [
          0,
          1,
          0,
        ],
        "Opacity": 1,
        "Size": [
          1,
          -2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          11,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          29,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          48,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              874,
              19,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          11,
          66,
          0,
        ],
        "Opacity": 1,
        "Size": [
          874,
          19,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_feedback_events_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      896,
      120,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have hit slop functionality 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_hit_slop_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              146,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          0,
          0,
          0,
        ],
        "Opacity": 1,
        "Size": [
          146,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "pressable_hit_slop_button",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      146,
      18,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 2`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text_console",
    "ControlType": 50020,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "text",
    "Name": "2x text onPress",
  },
  "Visual Tree": {
    "Comment": "tappable_text_console",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      854,
      19,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
